NOTASK: Small legal improvements.

--- a/app/src/main/assets/legal.html
+++ b/app/src/main/assets/legal.html
@@ -20,6 +20,7 @@ h2 {
             font-family: monospace, monospace;
         }
 
+
     </style>
 </head>
 <body>
@@ -63,13 +64,12 @@ h2 {
     <h2>Lizenzen</h2>
 
     <div>
-        Diese App verwendet Bibliotheken und Daten, wie von Dritten bereitgestellt wurden.
+        Diese App verwendet Bibliotheken und Daten, die von Dritten bereitgestellt wurden.
     </div>
 
     <h3>OpenStreetMap</h3>
     <div>
-        Die Geodaten für die Grazer Straßen die angezeigt werden, wenn man eine Straße anklickt
-        stammen von OpenStreetMap und deren Mitwirkenden und wurden unter der
+        Die Kartendaten stammen von OpenStreetMap und deren Mitwirkenden und wurden unter der
         <a href="https://www.opendatacommons.org/licenses/odbl">Open Database License</a>
         veröffentlicht.<br/>
         <a href="https://www.openstreetmap.org/copyright">OpenStreetMap Lizenz</a>
